BUG SQUASHED prints show like button

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -203,14 +203,15 @@ p > .fa-heart {
   border-right: 2px solid #ececec;
 }
 
-p > div > p > .fa-heart {
+.one > .fa-heart {
   /* position: absolute; */
+  color: red;
   margin-left: -15px;
   padding: 17px 259px 20px 35px;
   border: none;
 }
 
-p > div > .fa-heart { 
+.two > .fa-heart { 
   /* position: absolute; */
   margin-left: -15px;
   padding: 17px 259px 20px 35px;
